# mundone

./: README.md  pyproject.toml  setup.py  test.py  tests.py
mundone/: __init__.py  batch.py  logger.py  lsf.py  pool.py  runner.py  states.py  statuses.py  task.py  task2.py  workflow.py
mundone/executors/: __init__.py  local.py  lsf.py  slurm.py
